--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -22,6 +22,7 @@ img {
 
 h1 {
     font-size: 3.5rem;
+    margin: 20px 0 10px 0;
 }
 
 button {
@@ -65,10 +66,14 @@ button {
     font-size: calc(10px + 2vmin);
     color: white;
     padding: $basicSpace;
-    img {
-        width: 150px;
-        height: auto;
-        //box-shadow: 0px 13px 0px -8px #92278f3b;
+    a {
+        text-decoration: none;
+        font-family: monospace;
+        text-transform: none;
+        img {
+            width: 150px;
+            height: auto;
+        }
     }
 }
 
