feat: car right side on click

--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -11,9 +11,10 @@ img {
     width: 100%;
 }
 
-figcaption {
-    color: $primary;
-}
+// figcaption {
+//     color: $primary;
+//     font-size: 18px;
+// }
 
 .relative {
     position: relative;
@@ -33,6 +34,22 @@ button {
     line-height: 1.5;
     &:hover {
         outline: 1px solid #92278f;
+    }
+}
+
+hr.style1 {
+    border-top: 1px dashed #8c8b8b;
+}
+
+hr.style2 {
+    border-top: 1px solid #8c8b8b;
+    border-bottom: 1px solid #fff;
+    &::after {
+        content: '';
+        display: block;
+        margin-top: 2px;
+        border-top: 1px solid #8c8b8b;
+        border-bottom: 1px solid #fff;
     }
 }
 
