--- a/src/shared/components/cart/cart.scss
+++ b/src/shared/components/cart/cart.scss
@@ -3,12 +3,17 @@
 
 .cart {
     color: #333;
-    right: $basicSpace;
-    top: $basicSpace;
+    right: 1.5em;
+    top: $smallSpace;
+    z-index: 2;
+    cursor: pointer;
     span {
         color: $primary;
         font-family: monospace;
         margin-top: 10px;
         font-size: 80%;
     }
+}
+.shopping-cart {
+    color: #333;
 }
