--- a/src/index.scss
+++ b/src/index.scss
@@ -20,6 +20,9 @@ body {
     -moz-osx-font-smoothing: grayscale;
     font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
 }
+body.isHidden {
+    overflow: hidden;
+}
 
 h1 {
     font-size: 2.5rem;
