--- a/src/shared/components/header/header.scss
+++ b/src/shared/components/header/header.scss
@@ -5,12 +5,11 @@ header {
     background-color: transparent;
     min-height: 20vh;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
-    padding: $basicSpace / 2;
+    padding: $halfBasicSpace;
     a {
         text-decoration: none;
         font-family: monospace;
@@ -35,11 +34,5 @@ header {
                 height: auto;
             }
         }
-    }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-        animation: App-logo-spin infinite 20s linear;
     }
 }
